<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园云盘</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_login">登     录</string>
    <string name="string_admin">账户</string>
    <string name="string_password">密码</string>
    <string name="string_btnlogin">登录</string>
    <string name="string_btnregister">注册</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_file_forder">FileForderActivity</string>

</resources>
