<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/guide"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="100dip"
		android:orientation="horizontal"
		android:gravity="center_vertical">
		
	    <TextView
        	android:id="@+id/txv_login"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/string_login"
        	android:textSize="30sp"
        	android:layout_marginLeft="130dip">
		</TextView>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:layout_height="80dip"
		android:gravity="center_vertical"
		android:paddingLeft="50dip">
		
	    <TextView
        	android:id="@+id/txv_admin"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/string_admin"
        	android:textSize="12sp"
        	android:textColor="#808A87">
		</TextView>
		
	    <EditText
	        android:id="@+id/edv_inputadmin"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="50dip"
        	android:inputType="text"
        	android:text="admin"> 
	    </EditText> 
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:layout_height="80dip"
		android:gravity="center_vertical"
		android:paddingLeft="50dip">
		
	    <TextView
        	android:id="@+id/txv_password"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/string_password"
        	android:textSize="12sp"
        	android:textColor="#808A87">
		</TextView>
		
	    <EditText
	        android:id="@+id/edv_inputpassword"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="50dip"
        	android:inputType="textPassword"
        	android:text="sunriseadmin">
	    </EditText> 
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:layout_height="200dip"
		android:gravity="center_vertical"
		android:paddingLeft="70dip"
		android:paddingTop="30dip">
	    
	<Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dip"
        android:background="#1E90FF"
        android:text="@string/string_btnlogin"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="70dip"
        android:layout_marginTop="20dip"
        android:background="#1E90FF"
        android:text="@string/string_btnregister"
        android:textColor="#FFFFFF"/>
	</LinearLayout>
</LinearLayout>
